<resources>
    <string name="app_name">OYO</string>
    <string name="_91">+91</string>
    <string name="welcome_aboard">Welcome aboard!</string>
    <string name="enjoy_extra_100_off_on_your">Enjoy extra $100 off on your</string>
    <string name="first_stay">first stay!</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="Continue">Continue</string>
    <string name="or">OR</string>
    <string name="Countinue_with_google">Countinue with Google</string>
    <string name="one_tap_login_with_truecaller">One tap login with truecaller</string>
    <string name="i_ii_signup_later">I,II signup later</string>
    <string name="oyo">OYO</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="delhi">Delhi</string>
    <string name="bangalore">Bangalore</string>
    <string name="karnataka">Karnataka</string>
    <string name="haryana">Haryana</string>
    <string name="tamil_nadu">Tamil Nadu</string>
    <string name="chennai">chennai</string>
    <string name="popular">POPULAR</string>
    <string name="bihar">Bihar</string>
    <string name="patna">Patna</string>
    <string name="mumbai">Mumbai</string>
    <string name="bihar1">Bihar</string>
    <string name="new_delhi">New Delhi</string>
    <string name="punne">Punne</string>
    <string name="mumbai1">Mumbai</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="patna1">Patna</string>
    <string name="dubai">Dubai</string>
    <string name="pannji">Pannji</string>
    <string name="goa">Goa</string>
    <string name="maharashtra1">Maharashtra</string>
    <string name="mumbai2">Mumbai</string>
    <string name="haryana2">Haryana</string>
    <string name="gurgaon2">Gurgaon</string>
    <string name="maharashtra3">Maharashtra</string>
    <string name="punne3">Punne</string>
    <string name="maharashtra4">Maharashtra</string>
    <string name="patna2">Patna</string>
    <string name="popular1">POPULAR</string>
    <string name="_288_cities_offerings_this_deal">288 cities offerings this deal</string>
    <string name="search_nearby_oyos_with_this_offer">Search nearby OYOs with this offer</string>
    <string name="search_for_city_location_or_hotal">Search for city.location or hotal</string>
    <string name="your_plans">your plans!</string>
    <string name="rain_check">Rain check</string>
    <string name="explore">Explore</string>
    <string name="explore1">Explore</string>
</resources>