<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:background="@drawable/avi">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rain_check"
                android:textColor="@color/white"
                android:layout_marginTop="150dp"
                android:textSize="22sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_plans"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/trangle">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/find"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:inputType="text"
                android:background="@color/white"
                android:hint="@string/search_for_city_location_or_hotal"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_near_me_24" />

            <TextView
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/search_nearby_oyos_with_this_offer"
                android:textColor="#03A9F4"
                android:textSize="12sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/_288_cities_offerings_this_deal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/popular1"
            android:textColor="@color/black"
            android:textSize="10sp"
             />

        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/fotor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/bangalore"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-64dp"
                android:layout_marginTop="35dp"
                android:text="@string/karnataka"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/patna" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/patna2"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-34dp"
                android:layout_marginTop="35dp"
                android:text="@string/bihar1"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/bihar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/bihar"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-34dp"
                android:layout_marginTop="35dp"
                android:text="@string/patna"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/mumbai" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mumbai"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-54dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="35dp"
                android:text="@string/maharashtra4"
                android:textSize="9sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/punne" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/punne3"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-44dp"
                android:layout_marginTop="35dp"
                android:text="@string/maharashtra3"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="354dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gurgaon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/gurgaon2"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-54dp"
                android:layout_marginTop="35dp"
                android:text="@string/haryana2"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="358dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/fotor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mumbai2"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-54dp"
                android:layout_marginTop="35dp"
                android:text="@string/maharashtra1"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/goa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/goa"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-24dp"
                android:layout_marginTop="35dp"
                android:text="@string/pannji"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/dubai" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/dubai"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-34dp"
                android:layout_marginTop="35dp"
                android:text="Dubai"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/bihar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/patna1"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-34dp"
                android:layout_marginTop="35dp"
                android:text="Bihar"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="358dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/delhi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Delhi"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-34dp"
                android:layout_marginTop="35dp"
                android:text="@string/new_delhi"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/punne" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/punne"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-44dp"
                android:layout_marginTop="35dp"
                android:text="@string/karnataka"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/mumbai" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mumbai1"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-54dp"
                android:layout_marginTop="35dp"
                android:text="@string/maharashtra"
                android:textSize="9sp"
                tools:ignore="SmallSp" />

        </LinearLayout>















    </LinearLayout>


    </ScrollView>











