<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/oyo"
        android:layout_marginTop="40dp"
        android:textColor="#F00606"
        android:textSize="46sp"
        android:textStyle="bold" />

   <LinearLayout
       android:layout_width="90dp"
       android:layout_height="30dp"
       android:background="@drawable/right"
       android:layout_marginLeft="279dp"
       android:layout_marginTop="-45dp">


       <ImageView
           android:layout_width="25dp"
           android:layout_height="25dp"
           android:layout_marginTop="1dp"
           android:src="@drawable/iconi"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="1dp"
           android:text="en"/>
       <ImageView
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_marginTop="1dp"
           android:src="@drawable/baseline_keyboard_arrow_down_24"/>
   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textSize="21sp"
        android:text="@string/welcome_aboard"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="Enjoy extra ₹100 off on your"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textSize="21sp"
        android:text="First_stay! 🎉"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
      android:layout_marginLeft="20dp"
        android:background="@drawable/trangle"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="65dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/iconi"
            android:layout_marginTop="9dp"
           android:layout_marginLeft="-330dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="1dp"
            android:text="@string/_91"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"

            android:src="@drawable/baseline_keyboard_arrow_down_24"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="Continue"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
    android:background="@drawable/red"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_marginStart="20dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/trangle">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Countinue_with_google"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google"
            android:layout_marginLeft="-340dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_marginStart="20dp"
        android:layout_height="50dp"

        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/trangle">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="One tap login with Truecaller"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_call_24"
            android:layout_marginLeft="-330dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10dp"
        android:textColor="#2B80D9"
        android:layout_marginTop="20dp"
        android:text="@string/i_ii_signup_later"/>









</LinearLayout>